#+title: What’s new in adftool

* Noteworthy changes in release ?.? (????-??-??) [?]
** Bug fix: non-integer xsd:double or xsd:decimal literals can only be converted to integers if they are whole numbers

* Noteworthy changes in release 0.4.3 (2023-01-21) [alpha]
** Add a missing import to src/js/adftool_file.mjs
It is now possible to set the raw EEG data from JavaScript.

* Noteworthy changes in release 0.4.2 (2023-01-16) [alpha]
** Fully specify the storage type for HDF5
The HDF5 types for 32-bit integers are now specified as big
endian. This applies for B+ trees and nextID attributes. The files
must be recreated, but the uint32_t arguments of the C API are still
meant as native endianness, so your code won’t change.

* Noteworthy changes in release 0.4.1 (2023-01-13) [alpha]
** Package fixes
The continuous integration is now able to build a debian package,
without a "-dirty" suffix to the version number.
** Emscripten build fix
The file open function now respects the initialization bytes.

* Noteworthy changes in release 0.4.0 (2023-01-12) [alpha]
** Libbplus has now merged with adftool
Libbplus is no longer a dependency.

* Noteworthy changes in release 0.3.0 (2023-01-12) [alpha]
** Now use libbplus
The code has been moved around so as to use libbplus. libbplus is
included in adftool.

#+language: en
#+author: Vivien Kraus
#+email: vivien.kraus@univ-reims.fr
# Local Variables:
# mode: org
# End: