@@ -72,10 +72,10 @@ main (int argc, char *argv[])
     {+1, 0, +1, +1, +1, +1, +1, +1},
     {-1, -1, 0, -1, +1, +1, +1, +1},
     {-1, -1, +1, 0, +1, +1, +1, +1},
-    {-1, -1, -1, -1, 0, -1, +1, +1},
+    {-1, -1, -1, -1, 0, -1, +1, -1},
     {-1, -1, -1, -1, +1, 0, +1, +1},
     {-1, -1, -1, -1, -1, -1, 0, -1},
-    {-1, -1, -1, -1, -1, -1, +1, 0}
+    {-1, -1, -1, -1, +1, -1, +1, 0}
   };
   static const size_t n_terms = sizeof (all_terms) / sizeof (all_terms[0]);
   assert (sizeof (types) / sizeof (types[0]) == n_terms);
